ld/ldgram.y
@@ -1262,6 +1262,10 @@ phdr_type:
 			    $$ = exp_intop (0x6474e550);
 			  else if (strcmp (s, "PT_GNU_STACK") == 0)
 			    $$ = exp_intop (0x6474e551);
+			  else if (strcmp (s, "PT_GNU_RELRO") == 0)
+			    $$ = exp_intop (0x6474e552);
+			  else if (strcmp (s, "PT_GNU_PROPERTY") == 0)
+			    $$ = exp_intop (0x6474e553);
 			  else
 			    {
 			      einfo (_("\
